Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.6.0, 5.7.0, 5.8.0 Alpha
-
iOS 10, macOS Sierra
Description
The problem seems only to occur on iOS 10. It worked fine on iOS 9 and also on other platforms:
[EDIT]: Not only only iOS 10 is affected, but also all Qt apps running on macOS Sierra.
QSettings settings; settings.setValue("test", 1.0f); QSetting settings; bool bOk; setting.value("test", 1.0).toFloat(&bOk); // bOk is always false and 0 is returned
With qreal/double everything works:
void setSettings() { QSettings settings; settings.setValue("test", 1.0); } void loadSettings() { QSetting settings; bool bOk; setting.value("test", 1.0).toReal(&bOk); // bOk }